# quantmlayer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  rust-toolchain.toml
.github/workflows/: ci.yml  dco.yml  machine-interface.yml  musl-static.yml
benchmark/: OVERHEAD.md  RESULTS.md  report.py
benchmark/capability_escalation/: README.md
benchmark/forkbomb/: README.md
benchmark/ssh_theft/: README.md
benchmark/ssrf_metadata/: README.md
benchmark/unauthorized_exec/: README.md
benchmark/workspace_escape/: README.md
crates/ql-audit/: Cargo.toml
crates/ql-audit/src/: error.rs  lib.rs
crates/ql-bench/: Cargo.toml
crates/ql-bench/src/: attack.rs  backends.rs  main.rs
crates/ql-broker/: Cargo.toml
crates/ql-broker/src/: lib.rs  main.rs  nonce.rs  policy.rs  proxy.rs
crates/ql-broker/tests/: proxy.rs
crates/ql-cli/: Cargo.toml
crates/ql-cli/src/: agent.rs  audit.rs  broker.rs  doctor.rs  exec_tier.rs  export.rs  kill.rs  learn.rs  main.rs  mcp.rs  mcp_gateway.rs  observe.rs  policy.rs  profile.rs  registry.rs  result.rs  run.rs  token.rs  token_bind.rs  token_issue.rs  validate.rs
crates/ql-enforce/: Cargo.toml
crates/ql-enforce/examples/: cell_exec_probe.rs  demo_ssh_block.rs  fd_transfer_probe.rs  seccomp_notify_probe.rs
crates/ql-enforce/src/: cell.rs  cgroups.rs  context.rs  enforcer.rs  error.rs  exec_supervisor.rs  lib.rs  veth.rs
crates/ql-enforce/src/enforcers/: cgroup.rs  mod.rs  mount.rs  namespace.rs  network.rs  seccomp.rs
crates/ql-enforce/tests/: ssh_theft.rs
crates/ql-learn/: Cargo.toml
crates/ql-learn/src/: digest.rs  error.rs  lib.rs  observation.rs  observe.rs  risk.rs  shim.rs  synth.rs  trace.rs
crates/ql-lsm/: Cargo.toml  README.md  build.rs
crates/ql-lsm/examples/: enforce_demo.rs
crates/ql-lsm/src/: lib.rs
crates/ql-profile/: Cargo.toml
crates/ql-profile/src/: diff.rs  error.rs  eval.rs  export.rs  lib.rs  policy.rs
crates/ql-risk/: Cargo.toml
crates/ql-risk/src/: lib.rs
crates/ql-token/: Cargo.toml
crates/ql-token/src/: capability.rs  error.rs  identity.rs  lib.rs  token.rs
demo/: ab-demo.sh  demo.sh  hero.sh  honeytoken-demo.sh  mcp.sh  security-enforced.sh  security-rootless.sh
docs/: CNAME  MACHINE-INTERFACE.md  PLATFORMS.md  index.html  install.sh
packaging/apparmor/: usr.local.bin.ql
packaging/musl/: Dockerfile
profiles/: argv-kill-demo.yaml  coding.yaml  exec-demo.yaml
profiles/agents/: aider.yaml  claude.yaml  cline.yaml  codex.yaml  cursor.yaml  gemini.yaml  opencode.yaml  openhands.yaml
profiles/mcp/: default.yaml
scripts/: install.sh  ql-kernel-probe.sh  ql-matrix-run.sh  ql-matrix-table.py  ql-musl-build.sh  validate-agents.sh
scripts/lsm-enforce/: Makefile  README.md  enforce.bpf.c  loader.c
scripts/lsm-loadtest/: Makefile  README.md  loader.c  probe.bpf.c
