[package]
name = "ql-bench"
description = "QuantmLayer attack benchmark harness: runs a catalog of agent-escape attacks against each containment backend and reports which are blocked. The credibility engine."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "ql-bench"

[dependencies]
ql-profile = { workspace = true }
ql-enforce = { workspace = true }
libc = "0.2"
nix = { workspace = true }
sha2 = { version = "0.10", optional = true }

[features]
# Forwards to ql-enforce's exec wall (BPF-LSM) and pulls in sha2 for hashing
# the authorized binary in the unauthorized-exec benchmark row. Off by default
# so `make check` stays toolchain-free; build `--features lsm` to measure the
# exec row on a host with the kernel features and root.
lsm = ["ql-enforce/lsm", "dep:sha2"]

[[bin]]
name = "ql-bench"
path = "src/main.rs"

[[bin]]
name = "ql-forkprobe"
path = "src/bin/ql-forkprobe.rs"

[[bin]]
name = "ql-syscallprobe"
path = "src/bin/ql-syscallprobe.rs"

[[bin]]
name = "ql-netprobe"
path = "src/bin/ql-netprobe.rs"

[[bin]]
name = "ql-overhead"
path = "src/bin/ql-overhead.rs"
