[package]
name = "ql-enforce"
description = "QuantmLayer enforcement engine: constructs kernel-level containment cells from a portable ql-profile. Platform-specific (Linux)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# This crate is where ALL OS-specific code lives. It depends on the pure
# `ql-profile` data model and translates it into real kernel enforcement.
# New enforcement mechanisms are added here as new `Enforcer` implementations
# WITHOUT modifying existing ones (see the `enforcers` module).
[dependencies]
ql-profile = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
# Pure-Rust seccomp BPF filter generation (no libseccomp C dependency).
# Targets classic seccomp-bpf, available on every enterprise kernel (3.5+).
seccompiler = "0.4"
# Optional: the content-addressed exec-enforcement wall. Pulls in `ql-lsm`
# (libbpf-rs + a BPF build), so it is gated behind the `lsm` feature and OFF by
# default — the default-feature workspace build (`make check`) compiles without
# it and needs no eBPF toolchain. `ql-lsm` is excluded from the workspace for
# the same reason; it is referenced here only by path and built solely when
# `lsm` is enabled.
ql-lsm = { path = "../ql-lsm", optional = true }

[features]
# Compile the exec-enforcement wall into the cell. Build/verify only on a host
# with the eBPF toolchain: `cargo build -p ql-enforce --features lsm`.
lsm = ["dep:ql-lsm"]

[dev-dependencies]
# Used only by examples/tests (e.g. the seccomp-notify probe hashes the resolved
# execve target). Kept out of the production dependency set.
sha2 = "0.10"

# Linux-only crate. Guard the build so a mistaken macOS/Windows build fails
# loudly rather than compiling a non-functional stub.
[target.'cfg(not(target_os = "linux"))'.dependencies]
# (intentionally empty: see the compile_error! guard in lib.rs)
