[package]
name = "ql-learn"
description = "QuantmLayer's profile learner: observe an agent's real syscall behavior via ptrace and synthesize a least-privilege profile from it. The 'learning' half of the product."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ql-profile = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
